# NeuroNetLearn

./: HT.py  README.md  __init__.py  demo_network_inference.ipynb  genSetting.py  getBIC.py  net_est_auto.py  net_inf.py  net_inf_threshold.py  pyproject.toml  setup.cfg  simu_net.py  spg_genlasso_solver_jit.py  util.py
example/: demo_network_estimation.html  demo_network_estimation.ipynb  demo_network_inference.html  demo_network_inference.ipynb
examples/: demo_net_est.html  demo_net_inf.html  demo_network_estimation.html  demo_network_estimation.ipynb  demo_network_inference.html  demo_network_inference.ipynb
src/neuronetlearn/: __init__.py  genSetting.py  getBIC.py  ht.py  net_est_auto.py  net_inf.py  net_inf_threshold.py  simu_net.py  util.py
