[metadata]
name = neuronetlearn
version = 1.0.0
author = Xu Wang
author_email = wangxu85@uw.edu
description = Multi-Experiment Network Estimation and Inference for High-Dimensional Point Process Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stevenwang/NeuroNetLearn
project_urls =
    Bug Tracker = https://github.com/stevenwang/NeuroNetLearn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src